# Aution-near-hackathon

./: README.md  package-lock.json  package.json
contract/: Cargo.toml  README.md  build.sh  deploy.sh
contract/res/: auction.wasm
contract/src/: auction.rs  lib.rs  nft.rs
frontend/: package-lock.json
